--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
   }
   
   #section1{
-      background-image: url("http://childrenscommunity.in/uploads/the-blu-umbrella-ruskin-bond-1600143982.jpg");
+      background-image: url("unnamed.webp");
       background-size: 100%; ;
       background-repeat:no-repeat;
       width:100%;
@@ -77,14 +77,14 @@ body{
    width: 80px;
   }
   #contact{
-    background-image: url("https://play-lh.googleusercontent.com/proxy/5zA1G1ZsyPraO-WSQMpeiTnDFEimFpPYInkQUXZsuzo7LiIMF5LsOLzSNtolQWV0oWSmmwXc_bSaz0ZhdV8if_0D7ProVRBlGd1nvlkhP_TYVY4cxxXSdS4=w720-h405-rw");
+    background-image:url("unnamed.webp");
     background-repeat: no-repeat;
     background-size: 100%;
     width:100%;
       height: 50%;
-background-color: cyan;
-color: white;
-font-family: cursive;
+      background-color: cyan;
+     color: white;
+    font-family: cursive;
   }
   #image_edit{
     height: 80px;
